# flask_project

./: .gitignore  .pre-commit-config.yaml  README.md  admin.py  app.py  babel.cfg  config.py  database.py  main.py  middleware.py  models.py  pyproject.toml
apps/auth_app/: __init__.py  forms.py  views.py
apps/main_app/: __init__.py  views.py
certs/: localhost.crt  localhost.key
static/: base.css
templates/: _macro_render_field.html  base.html  form.html
templates/admin/: index.html
templates/auth_app/: login.html  register.html
utils/: __init__.py
