[tool.poetry]
name = "flask_service"
version = "0.1.0"
description = ""
authors = ["vl"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "1.4.3"
aniso8601 = "8.0.0"
attrs = "20.2.0"
Babel = "2.9.0"
blinker = "1.4"
certifi = "2020.11.8"
chardet = "3.0.4"
click = "7.1.2"
Flask = "1.1.2"
Flask-Admin = "1.5.7"
Flask-Babel = "2.0.0"
Flask-Cors = "3.0.10"
Flask-DebugToolbar = "0.11.0"
Flask-Login = "0.5.0"
Flask-Migrate = "2.5.3"
flask-restx = "0.2.0"
Flask-SQLAlchemy = "2.4.1"
Flask-WTF = "0.14.3"
idna = "2.10"
importlib-metadata = "2.0.0"
inflect = "5.0.2"
itsdangerous = "1.1.0"
Jinja2 = "2.11.2"
jsonschema = "3.2.0"
Mako = "1.1.3"
MarkupSafe = "1.1.1"
pre-commit = "2.11.1"
psycopg2-binary = "2.8.6"
PyJWT = "1.4.2"
pyrsistent = "0.17.3"
pytest = "6.2.2"
python-dateutil = "2.8.1"
python-dotenv = "0.15.0"
python-editor = "1.0.4"
pytz = "2020.1"
PyYAML = "5.1.2"
requests = "2.25.0"
secure = "0.2.1"
simplejson = "3.17.2"
six = "1.15.0"
sqlacodegen = "2.3.0"
SQLAlchemy = "1.3.10"
urllib3 = "1.26.2"
Werkzeug = "1.0.1"
WTForms = "2.3.3"
WTForms-SQLAlchemy = "0.2"
zipp = "3.3.1"
email-validator = "^1.3.0"
webbot = "^0.34"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
